Optimize speed of FormattedDate component, add margin to Header component, and update layout in BlogPost component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE, LINKEDIN, GITHUB } from '../consts';
 import { Icon } from 'astro-icon';
 ---
 
-<header class="flex justify-between items-end py-4">
+<header class="flex justify-between items-end py-4 m-2">
   <div class="md:flex items-center md:space-x-4">
     <h2 class="text-3xl font-bold  tracking-tighest">
       <a href="/">{SITE_TITLE}</a>
