--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import { EMAIL, LINKEDIN, INSTAGRAM } from "../consts";
 const today = new Date();
 ---
 
-<footer class="md:flex justify-between py-4 space-y-2">
+<footer class="md:flex justify-between py-4 space-y-2 mt-24">
   <p>&copy; {today.getFullYear()} William Kaiser. All rights reserved.</p>
   
   <ul class="flex md:flex-row space-x-4 md:space-x-2">
