Update prose-pre:text-md to prose-pre:text-sm in BlogPost.astro

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -113,7 +113,7 @@ const og = await getImage({
         )
       }
       <div
-        class="prose prose-lg prose-orange prose-pre:text-md mx-auto mt-12 text-gray-700 prose-a:text-orange hover:prose-a:text-orange-500 prose-figcaption:italic prose-figcaption:-mt-1 prose-figcaption:text-sm prose-figcaption:font-serif prose-img:drop-shadow-xl"
+        class="prose prose-lg prose-orange prose-pre:text-sm mx-auto mt-12 text-gray-700 prose-a:text-orange hover:prose-a:text-orange-500 prose-figcaption:italic prose-figcaption:-mt-1 prose-figcaption:text-sm prose-figcaption:font-serif prose-img:drop-shadow-xl"
       >
         <slot />
       </div>
