fixed spelling (oops)

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -88,7 +88,7 @@
             </li>
             <li>
               Profiling machine learning memory use in GPUs with CUDA and NVIDIA
-              Nsight Systems.
+              NSight Systems.
             </li>
             <li>
               Paid National Science Foundation position with Professor of
@@ -146,8 +146,7 @@
               reading pipeline leveraging OpenCV.
             </li>
             <li>
-              Statistically analyzed >13,000 mortgage applications and
-              underwritings using Microsoft Excel and R.
+              Statistically analyzed >13,000 mortgage applications using Microsoft Excel and R.
             </li>
             <li>
               Presented results of mortgage pipeline examination to client
@@ -207,7 +206,7 @@
             Organized a pitch competition with 10 teams and $1,000 in prizes.
           </li>
           <li>
-            Coodinated speaker events with local entreprenuers with over 50
+            Coordinated speaker events with local entrepreneurs with over 50
             attendees.
           </li>
         </ul>
@@ -338,7 +337,7 @@
           <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
           <li>Dean's List</li>
           <li>Eagle Scout Award</li>
-          <!-- <li>The Congressional Asward Gold Medal</li> -->
+          <!-- <li>The Congressional Award Gold Medal</li> -->
           <li>National Merit Finalist</li>
         </ul>
       </section>
