--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -1,21 +1,17 @@
 ---
 import { GOOGLE_ANALYTICS_ID } from "../consts";
+
+let mode = import.meta.env.PUBLIC_DEV_MODE;
 ---
 
 <!-- <script
   type="text/partytown"
   src=`https://www.googletagmanager.com/gtag/js?id=${GOOGLE_ANALYTICS_ID}`
 ></script>
-<script type="text/partytown">
-	window.dataLayer = window.dataLayer || [];
-	function gtag() {
-		dataLayer.push(arguments);
-	}
-	gtag("js", new Date());
-	gtag("config", GOOGLE_ANALYTICS_ID);
-</script> -->
+-->
 
 <!-- Google tag (gtag.js) -->
+{ mode !== "dev" && (
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDGVM797T"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -23,4 +19,4 @@ import { GOOGLE_ANALYTICS_ID } from "../consts";
   gtag('js', new Date());
 
   gtag('config', 'G-XKDGVM797T');
-</script>
+</script>)}
